@@ -1,3 +1,4 @@
+* Add noeval on PYSONDecoder
 * Add __repr__ to PYSON
 * Remove safe_eval
 * Add ModelView.view_attributes
